D3Parser.py
# Generated from D3.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class D3Parser ( Parser ):

    grammarFileName = "D3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'if'", "':'", "'elif'", 
                     "'else'", "'while'", "'for'", "'in'", "','", "'['", 
                     "']'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
                     "'and'", "'or'", "'not'", "'-'", "'='", "'+='", "'-='", 
                     "'*='", "'/='", "'+'", "'*'", "'/'", "'%'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<INDENT>'", 
                     "'<DEDENT>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COMMENT", "LINE_COMMENT", "BLOCK_COMMENT", "IDENTIFIER", 
                      "NUMBER", "STRING", "BOOL", "NEWLINE", "INDENT", "DEDENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expressionStatement = 2
    RULE_assignmentStatement = 3
    RULE_expression = 4
    RULE_conditionalStatement = 5
    RULE_loopStatement = 6
    RULE_block = 7
    RULE_condition = 8
    RULE_logicalTerm = 9
    RULE_arguments = 10
    RULE_comparison = 11
    RULE_list = 12
    RULE_comparisonOperator = 13
    RULE_logicalOperator = 14
    RULE_unaryOperator = 15
    RULE_assignmentOperator = 16
    RULE_arithmeticOperator = 17

    ruleNames =  [ "program", "statement", "expressionStatement", "assignmentStatement", 
                   "expression", "conditionalStatement", "loopStatement", 
                   "block", "condition", "logicalTerm", "arguments", "comparison", 
                   "list", "comparisonOperator", "logicalOperator", "unaryOperator", 
                   "assignmentOperator", "arithmeticOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    COMMENT=32
    LINE_COMMENT=33
    BLOCK_COMMENT=34
    IDENTIFIER=35
    NUMBER=36
    STRING=37
    BOOL=38
    NEWLINE=39
    INDENT=40
    DEDENT=41
    WS=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D3Parser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(D3Parser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(D3Parser.NEWLINE)
            else:
                return self.getToken(D3Parser.NEWLINE, i)

        def getRuleIndex(self):
            return D3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = D3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1069453150602) != 0):
                self.state = 36
                self.statement()
                self.state = 38
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 37
                    self.match(D3Parser.NEWLINE)


                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(D3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(D3Parser.AssignmentStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(D3Parser.ExpressionStatementContext,0)


        def conditionalStatement(self):
            return self.getTypedRuleContext(D3Parser.ConditionalStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(D3Parser.LoopStatementContext,0)


        def COMMENT(self):
            return self.getToken(D3Parser.COMMENT, 0)

        def getRuleIndex(self):
            return D3Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = D3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.assignmentStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.expressionStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.conditionalStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.loopStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.match(D3Parser.COMMENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(D3Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return D3Parser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = D3Parser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(D3Parser.IDENTIFIER, 0)

        def assignmentOperator(self):
            return self.getTypedRuleContext(D3Parser.AssignmentOperatorContext,0)


        def expression(self):
            return self.getTypedRuleContext(D3Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return D3Parser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)




    def assignmentStatement(self):

        localctx = D3Parser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(D3Parser.IDENTIFIER)
            self.state = 57
            self.assignmentOperator()
            self.state = 58
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryOperator(self):
            return self.getTypedRuleContext(D3Parser.UnaryOperatorContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D3Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(D3Parser.ExpressionContext,i)


        def IDENTIFIER(self):
            return self.getToken(D3Parser.IDENTIFIER, 0)

        def NUMBER(self):
            return self.getToken(D3Parser.NUMBER, 0)

        def STRING(self):
            return self.getToken(D3Parser.STRING, 0)

        def BOOL(self):
            return self.getToken(D3Parser.BOOL, 0)

        def list_(self):
            return self.getTypedRuleContext(D3Parser.ListContext,0)


        def arguments(self):
            return self.getTypedRuleContext(D3Parser.ArgumentsContext,0)


        def NEWLINE(self):
            return self.getToken(D3Parser.NEWLINE, 0)

        def COMMENT(self):
            return self.getToken(D3Parser.COMMENT, 0)

        def arithmeticOperator(self):
            return self.getTypedRuleContext(D3Parser.ArithmeticOperatorContext,0)


        def getRuleIndex(self):
            return D3Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D3Parser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 61
                self.unaryOperator()
                self.state = 62
                self.expression(10)
                pass

            elif la_ == 2:
                self.state = 64
                self.match(D3Parser.IDENTIFIER)
                pass

            elif la_ == 3:
                self.state = 65
                self.match(D3Parser.NUMBER)
                pass

            elif la_ == 4:
                self.state = 66
                self.match(D3Parser.STRING)
                pass

            elif la_ == 5:
                self.state = 67
                self.match(D3Parser.BOOL)
                pass

            elif la_ == 6:
                self.state = 68
                self.list_()
                pass

            elif la_ == 7:
                self.state = 69
                self.match(D3Parser.T__0)
                self.state = 70
                self.expression(0)
                self.state = 71
                self.match(D3Parser.T__1)
                pass

            elif la_ == 8:
                self.state = 73
                self.match(D3Parser.IDENTIFIER)
                self.state = 74
                self.match(D3Parser.T__0)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1069453150210) != 0):
                    self.state = 75
                    self.arguments()


                self.state = 78
                self.match(D3Parser.T__1)
                pass

            elif la_ == 9:
                self.state = 79
                self.match(D3Parser.NEWLINE)
                pass

            elif la_ == 10:
                self.state = 80
                self.match(D3Parser.COMMENT)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = D3Parser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 83
                    if not self.precpred(self._ctx, 11):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                    self.state = 84
                    self.arithmeticOperator()
                    self.state = 85
                    self.expression(12) 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ConditionalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D3Parser.ConditionContext)
            else:
                return self.getTypedRuleContext(D3Parser.ConditionContext,i)


        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(D3Parser.INDENT)
            else:
                return self.getToken(D3Parser.INDENT, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D3Parser.BlockContext)
            else:
                return self.getTypedRuleContext(D3Parser.BlockContext,i)


        def DEDENT(self, i:int=None):
            if i is None:
                return self.getTokens(D3Parser.DEDENT)
            else:
                return self.getToken(D3Parser.DEDENT, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(D3Parser.NEWLINE)
            else:
                return self.getToken(D3Parser.NEWLINE, i)

        def getRuleIndex(self):
            return D3Parser.RULE_conditionalStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalStatement" ):
                listener.enterConditionalStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalStatement" ):
                listener.exitConditionalStatement(self)




    def conditionalStatement(self):

        localctx = D3Parser.ConditionalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_conditionalStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(D3Parser.T__2)
            self.state = 93
            self.condition()
            self.state = 94
            self.match(D3Parser.T__3)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 95
                self.match(D3Parser.NEWLINE)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(D3Parser.INDENT)
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 102
                    self.match(D3Parser.NEWLINE) 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 108
            self.block()
            self.state = 109
            self.match(D3Parser.DEDENT)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.match(D3Parser.NEWLINE) 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 116
                self.match(D3Parser.T__4)
                self.state = 117
                self.condition()
                self.state = 118
                self.match(D3Parser.T__3)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 119
                    self.match(D3Parser.NEWLINE)
                    self.state = 124
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 125
                self.match(D3Parser.INDENT)
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 126
                        self.match(D3Parser.NEWLINE) 
                    self.state = 131
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 132
                self.block()
                self.state = 133
                self.match(D3Parser.DEDENT)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 140
                    self.match(D3Parser.NEWLINE) 
                self.state = 145
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 146
                self.match(D3Parser.T__5)
                self.state = 147
                self.match(D3Parser.T__3)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 148
                    self.match(D3Parser.NEWLINE)
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 154
                self.match(D3Parser.INDENT)
                self.state = 158
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 155
                        self.match(D3Parser.NEWLINE) 
                    self.state = 160
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                self.state = 161
                self.block()
                self.state = 162
                self.match(D3Parser.DEDENT)


            self.state = 169
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 166
                    self.match(D3Parser.NEWLINE) 
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(D3Parser.ConditionContext,0)


        def INDENT(self):
            return self.getToken(D3Parser.INDENT, 0)

        def block(self):
            return self.getTypedRuleContext(D3Parser.BlockContext,0)


        def DEDENT(self):
            return self.getToken(D3Parser.DEDENT, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(D3Parser.NEWLINE)
            else:
                return self.getToken(D3Parser.NEWLINE, i)

        def IDENTIFIER(self):
            return self.getToken(D3Parser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(D3Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return D3Parser.RULE_loopStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatement" ):
                listener.enterLoopStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatement" ):
                listener.exitLoopStatement(self)




    def loopStatement(self):

        localctx = D3Parser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loopStatement)
        self._la = 0 # Token type
        try:
            self.state = 200
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.match(D3Parser.T__6)
                self.state = 173
                self.condition()
                self.state = 174
                self.match(D3Parser.T__3)
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 175
                    self.match(D3Parser.NEWLINE)
                    self.state = 180
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 181
                self.match(D3Parser.INDENT)
                self.state = 182
                self.block()
                self.state = 183
                self.match(D3Parser.DEDENT)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.match(D3Parser.T__7)
                self.state = 186
                self.match(D3Parser.IDENTIFIER)
                self.state = 187
                self.match(D3Parser.T__8)
                self.state = 188
                self.expression(0)
                self.state = 189
                self.match(D3Parser.T__3)
                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 190
                    self.match(D3Parser.NEWLINE)
                    self.state = 195
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 196
                self.match(D3Parser.INDENT)
                self.state = 197
                self.block()
                self.state = 198
                self.match(D3Parser.DEDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(D3Parser.INDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(D3Parser.StatementContext,i)


        def DEDENT(self):
            return self.getToken(D3Parser.DEDENT, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(D3Parser.NEWLINE)
            else:
                return self.getToken(D3Parser.NEWLINE, i)

        def getRuleIndex(self):
            return D3Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = D3Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 202
                self.match(D3Parser.INDENT)


            self.state = 212 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 205
                self.statement()
                self.state = 209
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 206
                        self.match(D3Parser.NEWLINE) 
                    self.state = 211
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

                self.state = 214 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1069453150602) != 0)):
                    break

            self.state = 217
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.state = 216
                self.match(D3Parser.DEDENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D3Parser.LogicalTermContext)
            else:
                return self.getTypedRuleContext(D3Parser.LogicalTermContext,i)


        def logicalOperator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D3Parser.LogicalOperatorContext)
            else:
                return self.getTypedRuleContext(D3Parser.LogicalOperatorContext,i)


        def getRuleIndex(self):
            return D3Parser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = D3Parser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 219
            self.logicalTerm()
            self.state = 225
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19 or _la==20:
                self.state = 220
                self.logicalOperator()
                self.state = 221
                self.logicalTerm()
                self.state = 227
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalTermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D3Parser.ComparisonContext)
            else:
                return self.getTypedRuleContext(D3Parser.ComparisonContext,i)


        def comparisonOperator(self):
            return self.getTypedRuleContext(D3Parser.ComparisonOperatorContext,0)


        def condition(self):
            return self.getTypedRuleContext(D3Parser.ConditionContext,0)


        def getRuleIndex(self):
            return D3Parser.RULE_logicalTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalTerm" ):
                listener.enterLogicalTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalTerm" ):
                listener.exitLogicalTerm(self)




    def logicalTerm(self):

        localctx = D3Parser.LogicalTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logicalTerm)
        self._la = 0 # Token type
        try:
            self.state = 238
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 228
                self.comparison()
                self.state = 232
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 516096) != 0):
                    self.state = 229
                    self.comparisonOperator()
                    self.state = 230
                    self.comparison()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 234
                self.match(D3Parser.T__0)
                self.state = 235
                self.condition()
                self.state = 236
                self.match(D3Parser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
